--- a/17lesson/index.html
+++ b/17lesson/index.html
@@ -15,7 +15,7 @@
 
 
         <!-- header -->
-        <header class="header">
+        <!-- <header class="header">
             <div class="header-icon">
                 <a href="#">
                     <svg width="150" height="31" viewBox="0 0 150 31" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -79,7 +79,7 @@
 
 
                         </span>
-        </header>
+        </header> -->
 
 
 
